--- a/Public/index.html
+++ b/Public/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html ng-app="crowdLauncher">
-
 <head>
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="styles/tictail-like.css" />
     
-    <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
-    
-    <script type="text/javascript" src="scripts/directives.js"></script>
-    <script type="text/javascript" src="scripts/app.js"></script>
+    <script src="bower_components/angular/angular.min.js"></script>
+    <script src="bower_components/angular-route/angular-route.min.js"></script>
+    <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
+
+    <script src="scripts/directives.js"></script>
+    <script src="scripts/app.js"></script>
 </head>
 
 <body>
